fix: В блоке profile__caption в медиа запросе удалил повторяющиеся строки: align-content. Отредактировал блок список карточек: section со списком ul li в части именования по БЭМ и файловой структуры по БЭМ

--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -1,5 +1,5 @@
 /*блок ul - список мест, где побывал путешественник*/
-.list-elements {
+.elements__list {
   margin: 0;
   padding: 0;
   background: inherit;
