--- a/blocks/profile/__caption/profile__caption.css
+++ b/blocks/profile/__caption/profile__caption.css
@@ -20,6 +20,5 @@
   .profile__caption {
     gap: 14px 0;
     justify-content: center;
-    align-content: center;
   }
 }
